css-gen-op/amazon/quad_tmp.txt
   Compiling css-bitvector-compiler v0.0.1 (/home/w/gitproject/css-bitvector-compiler)
warning: unused import: `process::exit`
 --> src/quad.rs:9:5
  |
9 |     process::exit,
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0061]: this function takes 0 arguments but 1 argument was supplied
   --> src/quad.rs:392:40
    |
392 |             dom.recompute_styles(nfa, &get_input(nfa)); // 
    |                                        ^^^^^^^^^ --- unexpected argument of type `&NFA`
    |
note: function defined here
   --> src/quad.rs:381:4
    |
381 | fn get_input() -> Vec<OState> {
    |    ^^^^^^^^^
help: remove the extra argument
    |
392 -             dom.recompute_styles(nfa, &get_input(nfa)); // 
392 +             dom.recompute_styles(nfa, &get_input()); // 
    |

For more information about this error, try `rustc --explain E0061`.
warning: `css-bitvector-compiler` (bin "quad") generated 1 warning
error: could not compile `css-bitvector-compiler` (bin "quad") due to 1 previous error; 1 warning emitted
